--- a/Jogos/Lazerunner/LazeRunner.html
+++ b/Jogos/Lazerunner/LazeRunner.html
@@ -6,98 +6,56 @@
   <title>Lazer Runner</title>
   <style>
     body {
+      margin: 0;
+      background: #000;
+      color: white;
+      font-family: Arial, sans-serif;
       display: flex;
       justify-content: center;
       align-items: flex-start;
       gap: 20px;
       padding: 20px;
-      margin: 0;
-      background-color: #000;
-      color: white;
-      font-family: Arial, sans-serif;
+    }
+    #container {
+      position: relative;
+      width: 900px;
+      height: 900px;
     }
     canvas {
+      position: absolute;
+      top: 0;
+      left: 0;
       border: 2px solid #fff;
     }
-    #ranking {
-      width: 250px;
-    }
-    #ranking h2 {
-      margin-top: 0;
-    }
-    #footer {
-      position: absolute;
-      bottom: 10px;
-      left: 10px;
-      font-size: 24px;
-      color: #aaa;
-    }
-    #version {
-      position: absolute;
-      bottom: 10px;
-      right: 10px;
-      font-size: 14px;
-      color: #aaa;
-    }
-    #startScreen, #gameOverScreen {
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: rgba(0,0,0,0.8);
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      color: white;
-      font-size: 48px;
-      text-align: center;
-    }
-    #startScreen.hidden, #gameOverScreen.hidden {
-      display: none;
-    }
-    #startScreen button, #gameOverScreen button {
-      margin: 20px;
-      padding: 10px 20px;
-      font-size: 24px;
-      cursor: pointer;
-      background-color: white;
-      color: black;
-      border: none;
-      border-radius: 5px;
-    }
-    #startScreen button:hover, #gameOverScreen button:hover:not(:disabled) {
-      background-color: #ccc;
-    }
-    #saveRankingButton:disabled {
-      background-color: #888;
-      color: #ccc;
-      cursor: not-allowed;
-      opacity: 0.6;
-    }
+    /* Rankings, telas, botões e footer continuam conforme seu estilo anterior */
     #backButton {
       position: absolute;
-      top: 10px; left: 10px;
+      top: 10px;
+      left: 10px;
       padding: 8px 16px;
       font-size: 18px;
-      cursor: pointer;
       background-color: white;
       color: black;
       border: none;
       border-radius: 5px;
-      z-index: 1000;
-    }
-    #backButton:hover {
-      background-color: #ccc;
+      cursor: pointer;
+      z-index: 10;
     }
   </style>
 </head>
 <body>
   <button id="backButton" onclick="window.location.href='../CentralJogos.html'">Voltar</button>
-  <canvas id="gameCanvas" width="900" height="900"></canvas>
+
+  <div id="container">
+    <canvas id="canvasBg" width="900" height="900"></canvas>
+    <canvas id="canvasTrail" width="900" height="900"></canvas>
+  </div>
+
   <div id="ranking">
     <h2>Ranking</h2>
     <ol id="rankingList"></ol>
   </div>
+
   <div id="startScreen">
     <h1>LazerRunner</h1>
     <button id="playButton">Play</button>
@@ -109,14 +67,14 @@
     <button id="saveRankingButton">Salvar no Ranking</button>
   </div>
   <div id="footer">
-    Mover: Setas ou WASD<br>
-    Imunidade: Barra de espaço<br>
+    Mover: Setas ou WASD<br />
+    Imunidade: Barra de espaço<br />
     Reiniciar: Enter
   </div>
   <div id="version">Versão 1.3</div>
 
   <script>
-    // Prevenção de clique com botão direito e F12
+    // Previnindo clique direito e F12
     document.addEventListener('contextmenu', e => { e.preventDefault(); alert('Clique com o botão direito desativado.'); });
     document.addEventListener('keydown', e => {
       if (e.key === 'F12' || e.keyCode === 123) {
@@ -125,8 +83,12 @@
       }
     });
 
-    const canvas = document.getElementById('gameCanvas');
-    const ctx = canvas.getContext('2d');
+    // Canvas background e trail
+    const bg = document.getElementById('canvasBg');
+    const trail = document.getElementById('canvasTrail');
+    const bgCtx = bg.getContext('2d');
+    const trailCtx = trail.getContext('2d');
+
     const startScreen = document.getElementById('startScreen');
     const gameOverScreen = document.getElementById('gameOverScreen');
     const playButton = document.getElementById('playButton');
@@ -136,40 +98,39 @@
 
     // Variáveis de jogo
     let gameStarted = false, scoreSaved = false;
-    const boundary = { x:70, y:70, width:canvas.width-140, height:canvas.height-140 };
+    const boundary = { x:70, y:70, width: bg.width - 140, height: bg.height - 140 };
     const player = {
-      x: canvas.width/2, y: canvas.height/2,
-      radius: 20, speed: 4,
-      immune: false, immuneTime: 0,
-      immuneDuration: 1500, immuneCooldown: 2000, lastImmuneEnd: 0
+      x: bg.width/2,
+      y: bg.height/2,
+      radius: 20,
+      speed: 4,
+      immune: false,
+      immuneTime: 0,
+      immuneDuration: 1500,
+      immuneCooldown: 2000,
+      lastImmuneEnd: 0
     };
     let bars = [], score = 0, gameOver = false;
     let keys = { ArrowUp:false, ArrowDown:false, ArrowLeft:false, ArrowRight:false,
-                 w:false, W:false, s:false, S:false, a:false, A:false, d:false, D:false,
-                 ' ':false, Enter:false };
+                 w:false, s:false, a:false, d:false, ' ':false, Enter:false };
     let rankings = JSON.parse(localStorage.getItem('rankings')) || [];
 
+    // Funções de ranking
     function saveRanking() {
-      try {
-        localStorage.setItem('rankings', JSON.stringify(rankings));
-      } catch (e) {
-        alert('Erro ao salvar a pontuação.');
-      }
+      try { localStorage.setItem('rankings', JSON.stringify(rankings)); }
+      catch (e) { alert('Erro ao salvar ranking.'); }
     }
-
     function updateRanking() {
       const list = document.getElementById('rankingList');
       list.innerHTML = '';
-      rankings
-        .sort((a,b) => b.score - a.score)
-        .slice(0,10)
-        .forEach(e => {
-          const li = document.createElement('li');
-          li.textContent = `${e.name} - ${e.score}`;
-          list.appendChild(li);
-        });
+      rankings.sort((a,b) => b.score - a.score).slice(0,10).forEach(e => {
+        const li = document.createElement('li');
+        li.textContent = `${e.name} - ${e.score}`;
+        list.appendChild(li);
+      });
     }
 
+    // Controles
     document.addEventListener('keydown', e => {
       if (e.key in keys) {
         keys[e.key] = true;
@@ -195,14 +156,12 @@
         saveRankingButton.disabled = true;
         saveRankingButton.textContent = 'Salvo';
         alert('Pontuação salva!');
-      } else if (name !== null) {
-        alert('Nome inválido.');
-      }
+      } else if (name !== null) alert('Nome inválido.');
     });
 
     function resetGame() {
-      player.x = canvas.width/2;
-      player.y = canvas.height/2;
+      player.x = bg.width/2;
+      player.y = bg.height/2;
       player.immune = false;
       score = 0;
       bars = [];
@@ -221,25 +180,33 @@
       const length = Math.random()*400 + 200;
       const speed = 2 + Math.random()*1.8;
       let bar;
-      switch (dir) {
-        case 0: bar = { x:-thickness, y:Math.random()*(canvas.height-length), width:thickness, height:length, dx:speed, dy:0 }; break;
-        case 1: bar = { x:canvas.width, y:Math.random()*(canvas.height-length), width:thickness, height:length, dx:-speed, dy:0 }; break;
-        case 2: bar = { x:Math.random()*(canvas.width-length), y:-thickness, width:length, height:thickness, dx:0, dy:speed }; break;
-        case 3: bar = { x:Math.random()*(canvas.width-length), y:canvas.height, width:length, height:thickness, dx:0, dy:-speed }; break;
+      switch(dir) {
+        case 0:
+          bar = { x:-thickness, y:Math.random()*(bg.height-length), width:thickness, height:length, dx:speed, dy:0 };
+          break;
+        case 1:
+          bar = { x:bg.width, y:Math.random()*(bg.height-length), width:thickness, height:length, dx:-speed, dy:0 };
+          break;
+        case 2:
+          bar = { x:Math.random()*(bg.width-length), y:-thickness, width:length, height:thickness, dx:0, dy:speed };
+          break;
+        case 3:
+          bar = { x:Math.random()*(bg.width-length), y:bg.height, width:length, height:thickness, dx:0, dy:-speed };
+          break;
       }
       bars.push(bar);
     }
 
     function movePlayer(dt) {
-      let dx=0, dy=0;
-      if (keys.ArrowUp||keys.w) dy--;
-      if (keys.ArrowDown||keys.s) dy++;
-      if (keys.ArrowLeft||keys.a) dx--;
-      if (keys.ArrowRight||keys.d) dx++;
-      if (dx||dy) {
+      let dx = 0, dy = 0;
+      if (keys.ArrowUp || keys.w) dy--;
+      if (keys.ArrowDown || keys.s) dy++;
+      if (keys.ArrowLeft || keys.a) dx--;
+      if (keys.ArrowRight || keys.d) dx++;
+      if (dx || dy) {
         const len = Math.hypot(dx, dy);
-        player.x += dx/len * player.speed;
-        player.y += dy/len * player.speed;
+        player.x += (dx/len)*player.speed;
+        player.y += (dy/len)*player.speed;
         player.x = Math.max(boundary.x+player.radius, Math.min(player.x, boundary.x+boundary.width-player.radius));
         player.y = Math.max(boundary.y+player.radius, Math.min(player.y, boundary.y+boundary.height-player.radius));
       }
@@ -252,10 +219,10 @@
     function checkCollisions() {
       if (player.immune) return;
       for (const b of bars) {
-        if (player.x+player.radius > b.x &&
-            player.x-player.radius < b.x+b.width &&
-            player.y+player.radius > b.y &&
-            player.y-player.radius < b.y+b.height) {
+        if (player.x + player.radius > b.x &&
+            player.x - player.radius < b.x + b.width &&
+            player.y + player.radius > b.y &&
+            player.y - player.radius < b.y + b.height) {
           gameOver = true;
           break;
         }
@@ -269,64 +236,52 @@
       }
     }
 
-    function draw() {
-      if (!gameStarted) return;
-
-      // 1) limpa tela e fundo preto
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      ctx.fillStyle = '#000';
-      ctx.fillRect(0, 0, canvas.width, canvas.height);
-
-      // 2) desenha borda, barras e HUD (sem rastro)
-      ctx.strokeStyle = 'white';
-      ctx.lineWidth = 2;
-      ctx.strokeRect(boundary.x, boundary.y, boundary.width, boundary.height);      
-      ctx.fillStyle = 'red';
-      bars.forEach(b => ctx.fillRect(b.x, b.y, b.width, b.height));
-
+    function drawBg() {
+      bgCtx.clearRect(0, 0, bg.width, bg.height);
+      bgCtx.fillStyle = '#000';
+      bgCtx.fillRect(0, 0, bg.width, bg.height);
+      bgCtx.strokeStyle = 'white';
+      bgCtx.lineWidth = 2;
+      bgCtx.strokeRect(boundary.x, boundary.y, boundary.width, boundary.height);
+      bgCtx.fillStyle = 'red';
+      bars.forEach(b => bgCtx.fillRect(b.x, b.y, b.width, b.height));
+      // HUD
       const now = Date.now();
       const inCd = now - player.lastImmuneEnd < player.immuneCooldown;
       const immunityRem = player.immune ? Math.max(0, player.immuneDuration - (now - player.immuneTime)) : 0;
       const cooldownRem = Math.max(0, player.immuneCooldown - (now - player.lastImmuneEnd));
+      bgCtx.fillStyle = 'white';
+      bgCtx.font = '24px Arial';
+      bgCtx.textAlign = 'left';
+      bgCtx.fillText(`Pontuação: ${score}`, 10, 30);
+      bgCtx.fillStyle = 'yellow';
+      bgCtx.font = '18px Arial';
+      bgCtx.fillText(`Imunidade: ${(immunityRem/1000).toFixed(1)}s`, 180, 28);
+      bgCtx.fillStyle = inCd ? 'gray' : 'green';
+      bgCtx.fillText(`Recarga: ${(cooldownRem/1000).toFixed(1)}s`, 340, 28);
+    }
 
-      ctx.fillStyle = 'white';
-      ctx.font = '24px Arial';
-      ctx.textAlign = 'left';
-      ctx.fillText(`Pontuação: ${score}`, 10, 30);
-      ctx.fillStyle = 'yellow';
-      ctx.font = '18px Arial';
-      ctx.fillText(`Imunidade: ${(immunityRem/1000).toFixed(1)}s`, 180, 28);
-      ctx.fillStyle = inCd ? 'gray' : 'green';
-      ctx.fillText(`Recarga: ${(cooldownRem/1000).toFixed(1)}s`, 340, 28);
-
-      // 3) aplica rastro apenas para o jogador
-      ctx.fillStyle = 'rgba(0, 0, 0, 0.15)';
-      ctx.fillRect(0, 0, canvas.width, canvas.height);
-
-      // 4) desenha jogador por cima
-      ctx.beginPath();
-      ctx.arc(player.x, player.y, player.radius, 0, Math.PI*2);
-      ctx.fillStyle = player.immune ? 'yellow' : inCd ? '#444' : 'white';
-      ctx.fill();
+    function drawTrail() {
+      trailCtx.fillStyle = 'rgba(0,0,0,0.15)';
+      trailCtx.fillRect(0, 0, trail.width, trail.height);
+      const now = Date.now();
+      const inCd = now - player.lastImmuneEnd < player.immuneCooldown;
+      trailCtx.beginPath();
+      trailCtx.arc(player.x, player.y, player.radius, 0, 2*Math.PI);
+      trailCtx.fillStyle = player.immune ? 'yellow' : inCd ? '#444' : 'white';
+      trailCtx.fill();
       if (player.immune) {
-        ctx.beginPath();
-        ctx.arc(player.x, player.y, player.radius + 10, 0, Math.PI*2);
-        ctx.strokeStyle = 'yellow';
-        ctx.lineWidth = 3;
-        ctx.stroke();
-      }
-
-      // 5) exibe tela de game over se necessário
-      if (gameOver) {
-        finalScoreText.textContent = `Pontuação Final: ${score}`;
-        gameOverScreen.classList.remove('hidden');
+        trailCtx.beginPath();
+        trailCtx.arc(player.x, player.y, player.radius + 10, 0, 2*Math.PI);
+        trailCtx.strokeStyle = 'yellow';
+        trailCtx.lineWidth = 3;
+        trailCtx.stroke();
       }
     }
 
     let lastFrameTime = 0, lastBarTime = 0;
     function gameLoop(ts) {
-      if (!gameStarted || gameOver) { draw(); return; }
-
+      if (!gameStarted) return;
       const dt = (ts - lastFrameTime) / 16.67;
       lastFrameTime = ts;
 
@@ -339,7 +294,7 @@
       else                   { barInterval = 3500; numBars = 3; }
 
       if (ts - lastBarTime > barInterval) {
-        for (let i = 0; i < numBars; i++) createBar();
+        for (let i=0; i<numBars; i++) createBar();
         lastBarTime = ts;
         score++;
       }
@@ -348,17 +303,20 @@
       moveBars(dt);
       manageImmunity();
       checkCollisions();
-      draw();
 
-      requestAnimationFrame(gameLoop);
+      drawBg();
+      drawTrail();
+
+      if (gameOver) {
+        finalScoreText.textContent = `Pontuação Final: ${score}`;
+        gameOverScreen.classList.remove('hidden');
+      } else {
+        requestAnimationFrame(gameLoop);
+      }
     }
 
     updateRanking();
-    requestAnimationFrame(ts => {
-      lastFrameTime = ts;
-      lastBarTime = ts;
-      gameLoop(ts);
-    });
+    requestAnimationFrame(ts => { lastFrameTime = ts; lastBarTime = ts; gameLoop(ts); });
   </script>
 </body>
 </html>
