--- a/Jogos/Lazerunner/LazeRunner.html
+++ b/Jogos/Lazerunner/LazeRunner.html
@@ -3,73 +3,320 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Lazer Runner - Trail</title>
+  <title>Lazer Runner</title>
   <style>
-    body, html { margin:0; padding:0; background:#000; overflow:hidden; }
-    #container { position: relative; }
-    canvas { position:absolute; top:0; left:0; }
-    /* estilos para ranking e botões... */
+    body {
+      margin: 0;
+      background: #000;
+      color: white;
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      gap: 20px;
+      padding: 20px;
+    }
+    #container {
+      position: relative;
+      width: 900px;
+      height: 900px;
+    }
+    canvas {
+      position: absolute;
+      top: 0;
+      left: 0;
+      border: 2px solid #fff;
+    }
+    /* Rankings, telas, botões e footer continuam conforme seu estilo anterior */
+    #backButton {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      padding: 8px 16px;
+      font-size: 18px;
+      background-color: white;
+      color: black;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      z-index: 10;
+    }
   </style>
 </head>
 <body>
   <button id="backButton" onclick="window.location.href='../CentralJogos.html'">Voltar</button>
+
   <div id="container">
     <canvas id="canvasBg" width="900" height="900"></canvas>
     <canvas id="canvasTrail" width="900" height="900"></canvas>
   </div>
-  <!-- ranking, screens, footer... -->
+
+  <div id="ranking">
+    <h2>Ranking</h2>
+    <ol id="rankingList"></ol>
+  </div>
+
+  <div id="startScreen">
+    <h1>LazerRunner</h1>
+    <button id="playButton">Play</button>
+  </div>
+  <div id="gameOverScreen" class="hidden">
+    <h1>Game Over</h1>
+    <p id="finalScore"></p>
+    <button id="restartButton">Restart</button>
+    <button id="saveRankingButton">Salvar no Ranking</button>
+  </div>
+  <div id="footer">
+    Mover: Setas ou WASD<br />
+    Imunidade: Barra de espaço<br />
+    Reiniciar: Enter
+  </div>
+  <div id="version">Versão 1.3</div>
 
   <script>
-    const bg = document.getElementById('canvasBg'),
-          trail = document.getElementById('canvasTrail'),
-          bgCtx = bg.getContext('2d'), trailCtx = trail.getContext('2d');
-    const width = bg.width, height = bg.height;
-    /* definições de player, bars, controls, ranking etc. (idem ao seu código) */
+    // Previnindo clique direito e F12
+    document.addEventListener('contextmenu', e => { e.preventDefault(); alert('Clique com o botão direito desativado.'); });
+    document.addEventListener('keydown', e => {
+      if (e.key === 'F12' || e.keyCode === 123) {
+        e.preventDefault();
+        alert('Ferramentas de desenvolvedor desativadas.');
+      }
+    });
+
+    // Canvas background e trail
+    const bg = document.getElementById('canvasBg');
+    const trail = document.getElementById('canvasTrail');
+    const bgCtx = bg.getContext('2d');
+    const trailCtx = trail.getContext('2d');
+
+    const startScreen = document.getElementById('startScreen');
+    const gameOverScreen = document.getElementById('gameOverScreen');
+    const playButton = document.getElementById('playButton');
+    const restartButton = document.getElementById('restartButton');
+    const saveRankingButton = document.getElementById('saveRankingButton');
+    const finalScoreText = document.getElementById('finalScore');
+
+    // Variáveis de jogo
+    let gameStarted = false, scoreSaved = false;
+    const boundary = { x:70, y:70, width: bg.width - 140, height: bg.height - 140 };
+    const player = {
+      x: bg.width/2,
+      y: bg.height/2,
+      radius: 20,
+      speed: 4,
+      immune: false,
+      immuneTime: 0,
+      immuneDuration: 1500,
+      immuneCooldown: 2000,
+      lastImmuneEnd: 0
+    };
+    let bars = [], score = 0, gameOver = false;
+    let keys = { ArrowUp:false, ArrowDown:false, ArrowLeft:false, ArrowRight:false,
+                 w:false, s:false, a:false, d:false, ' ':false, Enter:false };
+    let rankings = JSON.parse(localStorage.getItem('rankings')) || [];
+
+    // Funções de ranking
+    function saveRanking() {
+      try { localStorage.setItem('rankings', JSON.stringify(rankings)); }
+      catch (e) { alert('Erro ao salvar ranking.'); }
+    }
+    function updateRanking() {
+      const list = document.getElementById('rankingList');
+      list.innerHTML = '';
+      rankings.sort((a,b) => b.score - a.score).slice(0,10).forEach(e => {
+        const li = document.createElement('li');
+        li.textContent = `${e.name} - ${e.score}`;
+        list.appendChild(li);
+      });
+    }
+
+    // Controles
+    document.addEventListener('keydown', e => {
+      if (e.key in keys) {
+        keys[e.key] = true;
+        if (e.key === ' ' && !player.immune && Date.now() - player.lastImmuneEnd >= player.immuneCooldown) {
+          player.immune = true;
+          player.immuneTime = Date.now();
+        }
+        if (e.key === 'Enter' && gameOver) resetGame();
+      }
+    });
+    document.addEventListener('keyup', e => { if (e.key in keys) keys[e.key] = false; });
+
+    playButton.addEventListener('click', () => { startScreen.classList.add('hidden'); gameStarted = true; resetGame(); });
+    restartButton.addEventListener('click', () => { gameOverScreen.classList.add('hidden'); resetGame(); });
+    saveRankingButton.addEventListener('click', () => {
+      if (scoreSaved) return;
+      const name = prompt('Digite seu nome:');
+      if (name && name.trim()) {
+        rankings.push({ name: name.trim(), score });
+        saveRanking();
+        updateRanking();
+        scoreSaved = true;
+        saveRankingButton.disabled = true;
+        saveRankingButton.textContent = 'Salvo';
+        alert('Pontuação salva!');
+      } else if (name !== null) alert('Nome inválido.');
+    });
+
+    function resetGame() {
+      player.x = bg.width/2;
+      player.y = bg.height/2;
+      player.immune = false;
+      score = 0;
+      bars = [];
+      gameOver = false;
+      scoreSaved = false;
+      saveRankingButton.disabled = false;
+      saveRankingButton.textContent = 'Salvar no Ranking';
+      lastFrameTime = lastBarTime = 0;
+      gameOverScreen.classList.add('hidden');
+      requestAnimationFrame(gameLoop);
+    }
+
+    function createBar() {
+      const dir = Math.floor(Math.random()*4);
+      const thickness = 30;
+      const length = Math.random()*400 + 200;
+      const speed = 2 + Math.random()*1.8;
+      let bar;
+      switch(dir) {
+        case 0:
+          bar = { x:-thickness, y:Math.random()*(bg.height-length), width:thickness, height:length, dx:speed, dy:0 };
+          break;
+        case 1:
+          bar = { x:bg.width, y:Math.random()*(bg.height-length), width:thickness, height:length, dx:-speed, dy:0 };
+          break;
+        case 2:
+          bar = { x:Math.random()*(bg.width-length), y:-thickness, width:length, height:thickness, dx:0, dy:speed };
+          break;
+        case 3:
+          bar = { x:Math.random()*(bg.width-length), y:bg.height, width:length, height:thickness, dx:0, dy:-speed };
+          break;
+      }
+      bars.push(bar);
+    }
+
+    function movePlayer(dt) {
+      let dx = 0, dy = 0;
+      if (keys.ArrowUp || keys.w) dy--;
+      if (keys.ArrowDown || keys.s) dy++;
+      if (keys.ArrowLeft || keys.a) dx--;
+      if (keys.ArrowRight || keys.d) dx++;
+      if (dx || dy) {
+        const len = Math.hypot(dx, dy);
+        player.x += (dx/len)*player.speed;
+        player.y += (dy/len)*player.speed;
+        player.x = Math.max(boundary.x+player.radius, Math.min(player.x, boundary.x+boundary.width-player.radius));
+        player.y = Math.max(boundary.y+player.radius, Math.min(player.y, boundary.y+boundary.height-player.radius));
+      }
+    }
+
+    function moveBars(dt) {
+      bars.forEach(b => { b.x += b.dx * dt; b.y += b.dy * dt; });
+    }
+
+    function checkCollisions() {
+      if (player.immune) return;
+      for (const b of bars) {
+        if (player.x + player.radius > b.x &&
+            player.x - player.radius < b.x + b.width &&
+            player.y + player.radius > b.y &&
+            player.y - player.radius < b.y + b.height) {
+          gameOver = true;
+          break;
+        }
+      }
+    }
+
+    function manageImmunity() {
+      if (player.immune && Date.now() - player.immuneTime > player.immuneDuration) {
+        player.immune = false;
+        player.lastImmuneEnd = Date.now();
+      }
+    }
 
     function drawBg() {
-      bgCtx.clearRect(0,0,width,height);
+      bgCtx.clearRect(0, 0, bg.width, bg.height);
       bgCtx.fillStyle = '#000';
-      bgCtx.fillRect(0,0,width,height);
-      bgCtx.strokeStyle='white'; bgCtx.lineWidth=2;
-      bgCtx.strokeRect(boundary.x,boundary.y,boundary.width,boundary.height);
-      bgCtx.fillStyle='red';
-      bars.forEach(b=> bgCtx.fillRect(b.x,b.y,b.width,b.height));
-      /* HUD */
+      bgCtx.fillRect(0, 0, bg.width, bg.height);
+      bgCtx.strokeStyle = 'white';
+      bgCtx.lineWidth = 2;
+      bgCtx.strokeRect(boundary.x, boundary.y, boundary.width, boundary.height);
+      bgCtx.fillStyle = 'red';
+      bars.forEach(b => bgCtx.fillRect(b.x, b.y, b.width, b.height));
+      // HUD
+      const now = Date.now();
+      const inCd = now - player.lastImmuneEnd < player.immuneCooldown;
+      const immunityRem = player.immune ? Math.max(0, player.immuneDuration - (now - player.immuneTime)) : 0;
+      const cooldownRem = Math.max(0, player.immuneCooldown - (now - player.lastImmuneEnd));
+      bgCtx.fillStyle = 'white';
+      bgCtx.font = '24px Arial';
+      bgCtx.textAlign = 'left';
+      bgCtx.fillText(`Pontuação: ${score}`, 10, 30);
+      bgCtx.fillStyle = 'yellow';
+      bgCtx.font = '18px Arial';
+      bgCtx.fillText(`Imunidade: ${(immunityRem/1000).toFixed(1)}s`, 180, 28);
+      bgCtx.fillStyle = inCd ? 'gray' : 'green';
+      bgCtx.fillText(`Recarga: ${(cooldownRem/1000).toFixed(1)}s`, 340, 28);
     }
 
     function drawTrail() {
-      // Rastro sutil do jogador
-      trailCtx.fillStyle='rgba(0,0,0,0.15)';
-      trailCtx.fillRect(0,0,width,height);
-      // Desenha jogador
+      trailCtx.fillStyle = 'rgba(0,0,0,0.15)';
+      trailCtx.fillRect(0, 0, trail.width, trail.height);
+      const now = Date.now();
+      const inCd = now - player.lastImmuneEnd < player.immuneCooldown;
       trailCtx.beginPath();
       trailCtx.arc(player.x, player.y, player.radius, 0, 2*Math.PI);
-      trailCtx.fillStyle = player.immune?'yellow':(inCd?'#444':'white');
+      trailCtx.fillStyle = player.immune ? 'yellow' : inCd ? '#444' : 'white';
       trailCtx.fill();
       if (player.immune) {
-        trailCtx.strokeStyle='yellow'; trailCtx.lineWidth=3;
         trailCtx.beginPath();
-        trailCtx.arc(player.x, player.y, player.radius+10, 0, 2*Math.PI);
+        trailCtx.arc(player.x, player.y, player.radius + 10, 0, 2*Math.PI);
+        trailCtx.strokeStyle = 'yellow';
+        trailCtx.lineWidth = 3;
         trailCtx.stroke();
       }
     }
 
+    let lastFrameTime = 0, lastBarTime = 0;
     function gameLoop(ts) {
-      if (!gameStarted || gameOver) {
-        drawBg();
-        drawTrail();
-        return;
+      if (!gameStarted) return;
+      const dt = (ts - lastFrameTime) / 16.67;
+      lastFrameTime = ts;
+
+      let barInterval, numBars;
+      if (score <= 10)       { barInterval = 4000; numBars = 2; }
+      else if (score <= 25)  { barInterval = 3000; numBars = 2; }
+      else if (score <= 35)  { barInterval = 4000; numBars = 3; }
+      else if (score <= 45)  { barInterval = 3800; numBars = 3; }
+      else if (score <= 55)  { barInterval = 4000; numBars = 4; }
+      else                   { barInterval = 3500; numBars = 3; }
+
+      if (ts - lastBarTime > barInterval) {
+        for (let i=0; i<numBars; i++) createBar();
+        lastBarTime = ts;
+        score++;
       }
-      /* lógica de criação de bars, movimento, colisões */
+
+      movePlayer(dt);
+      moveBars(dt);
+      manageImmunity();
+      checkCollisions();
 
       drawBg();
       drawTrail();
 
-      requestAnimationFrame(gameLoop);
+      if (gameOver) {
+        finalScoreText.textContent = `Pontuação Final: ${score}`;
+        gameOverScreen.classList.remove('hidden');
+      } else {
+        requestAnimationFrame(gameLoop);
+      }
     }
 
-    resetGame();
-    requestAnimationFrame(gameLoop);
+    updateRanking();
+    requestAnimationFrame(ts => { lastFrameTime = ts; lastBarTime = ts; gameLoop(ts); });
   </script>
 </body>
 </html>
