--- a/Jogos/Lazerunner/LazeRunner.html
+++ b/Jogos/Lazerunner/LazeRunner.html
@@ -23,30 +23,11 @@
     #ranking {
       width: 250px;
     }
-    #ranking h2 {
-      margin-top: 0;
-    }
-    #footer {
-      position: absolute;
-      bottom: 10px;
-      left: 10px;
-      font-size: 24px;
-      color: #aaa;
-    }
-    #version {
-      position: absolute;
-      bottom: 10px;
-      right: 10px;
-      font-size: 14px;
-      color: #aaa;
-    }
     #startScreen, #gameOverScreen {
       position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0,0,0,0.8);
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0, 0, 0, 0.8);
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -55,50 +36,21 @@
       font-size: 48px;
       text-align: center;
     }
-    #startScreen.hidden, #gameOverScreen.hidden {
+    .hidden {
       display: none;
     }
-    #startScreen button, #gameOverScreen button {
-      margin: 20px;
+    button {
+      margin: 10px;
       padding: 10px 20px;
-      font-size: 24px;
-      cursor: pointer;
-      background-color: white;
-      color: black;
+      font-size: 20px;
       border: none;
       border-radius: 5px;
-    }
-    #startScreen button:hover, #gameOverScreen button:hover:not(:disabled) {
-      background-color: #ccc;
-    }
-    #saveRankingButton:disabled {
-      background-color: #888;
-      color: #ccc;
-      cursor: not-allowed;
-      opacity: 0.6;
-    }
-    #backButton {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      padding: 8px 16px;
-      font-size: 18px;
       cursor: pointer;
-      background-color: white;
-      color: black;
-      border: none;
-      border-radius: 5px;
-      z-index: 1000;
-    }
-    #backButton:hover {
-      background-color: #ccc;
     }
     #immunityBar {
       position: absolute;
-      top: 40px;
-      left: 10px;
-      width: 150px;
-      height: 20px;
+      top: 40px; left: 10px;
+      width: 150px; height: 20px;
       border: 2px solid white;
       background-color: #333;
     }
@@ -113,26 +65,242 @@
   </style>
 </head>
 <body>
-  <button id="backButton" onclick="window.location.href='index.html'">Voltar</button>
-  <div id="immunityBar"><div id="immunityFill"></div></div>
-  <canvas id="gameCanvas" width="800" height="600"></canvas>
+  <canvas id="gameCanvas" width="800" height="800"></canvas>
   <div id="ranking">
     <h2>Ranking</h2>
-    <ul id="rankingList"></ul>
+    <ol id="rankingList"></ol>
   </div>
+
   <div id="startScreen">
-    <div>Lazer Runner</div>
-    <button onclick="startGame()">Começar</button>
+    <h1>Lazer Runner</h1>
+    <button id="playButton">Jogar</button>
   </div>
+
   <div id="gameOverScreen" class="hidden">
-    <div>Game Over</div>
-    <div id="finalScore"></div>
-    <input type="text" id="playerName" placeholder="Seu nome" />
-    <button id="saveRankingButton" onclick="saveRanking()">Salvar Ranking</button>
-    <button onclick="resetGame()">Jogar Novamente</button>
+    <h1>Game Over</h1>
+    <p id="finalScore"></p>
+    <button id="restartButton">Reiniciar</button>
+    <button id="saveRankingButton">Salvar no Ranking</button>
   </div>
-  <div id="footer">Lazer Runner</div>
-  <div id="version">v1.0.0</div>
-  <script src="game.js"></script>
+
+  <div id="immunityBar">
+    <div id="immunityFill"></div>
+  </div>
+
+  <script>
+    const canvas = document.getElementById('gameCanvas');
+    const ctx = canvas.getContext('2d');
+
+    const playButton = document.getElementById('playButton');
+    const restartButton = document.getElementById('restartButton');
+    const saveRankingButton = document.getElementById('saveRankingButton');
+    const startScreen = document.getElementById('startScreen');
+    const gameOverScreen = document.getElementById('gameOverScreen');
+    const finalScoreText = document.getElementById('finalScore');
+    const fill = document.getElementById('immunityFill');
+
+    const boundary = { x: 50, y: 50, width: canvas.width - 100, height: canvas.height - 100 };
+    let player = {
+      x: canvas.width / 2,
+      y: canvas.height / 2,
+      radius: 20,
+      speed: 4,
+      immune: false,
+      energy: 100,
+      energyCost: 1,
+      rechargeRate: 0.5,
+      trail: []
+    };
+
+    let keys = {}, bars = [], score = 0, gameStarted = false, gameOver = false, scoreSaved = false;
+    let lastFrameTime = 0, lastBarTime = 0;
+    let rankings = JSON.parse(localStorage.getItem('rankings')) || [];
+
+    document.addEventListener('keydown', e => {
+      keys[e.key] = true;
+      if (e.key === ' ' && !player.immune && player.energy >= 10) {
+        player.immune = true;
+      }
+      if (e.key === 'Enter' && gameOver) resetGame();
+    });
+    document.addEventListener('keyup', e => {
+      keys[e.key] = false;
+      if (e.key === ' ') player.immune = false;
+    });
+
+    playButton.onclick = () => { startScreen.classList.add('hidden'); gameStarted = true; resetGame(); };
+    restartButton.onclick = () => { gameOverScreen.classList.add('hidden'); resetGame(); };
+    saveRankingButton.onclick = () => {
+      if (scoreSaved) return;
+      const name = prompt("Digite seu nome:");
+      if (name) {
+        rankings.push({ name: name.trim(), score });
+        localStorage.setItem('rankings', JSON.stringify(rankings));
+        updateRanking();
+        saveRankingButton.disabled = true;
+        scoreSaved = true;
+      }
+    };
+
+    function resetGame() {
+      player.x = canvas.width / 2;
+      player.y = canvas.height / 2;
+      player.energy = 100;
+      player.immune = false;
+      player.trail = [];
+      bars = [];
+      score = 0;
+      gameOver = false;
+      scoreSaved = false;
+      saveRankingButton.disabled = false;
+      gameOverScreen.classList.add('hidden');
+      updateImmunityBar();
+      requestAnimationFrame(gameLoop);
+    }
+
+    function updateImmunityBar() {
+      fill.style.width = `${player.energy}%`;
+      fill.className = player.immune ? '' : 'cooldown';
+    }
+
+    function movePlayer() {
+      let dx = 0, dy = 0;
+      if (keys.ArrowUp || keys.w) dy -= 1;
+      if (keys.ArrowDown || keys.s) dy += 1;
+      if (keys.ArrowLeft || keys.a) dx -= 1;
+      if (keys.ArrowRight || keys.d) dx += 1;
+      const len = Math.hypot(dx, dy);
+      if (len) {
+        player.x += (dx / len) * player.speed;
+        player.y += (dy / len) * player.speed;
+        player.x = Math.max(boundary.x + player.radius, Math.min(player.x, boundary.x + boundary.width - player.radius));
+        player.y = Math.max(boundary.y + player.radius, Math.min(player.y, boundary.y + boundary.height - player.radius));
+        player.trail.push({ x: player.x, y: player.y, time: Date.now() });
+      }
+    }
+
+    function manageImmunity() {
+      if (player.immune) {
+        player.energy = Math.max(0, player.energy - player.energyCost);
+        if (player.energy <= 0) player.immune = false;
+      } else {
+        player.energy = Math.min(100, player.energy + player.rechargeRate);
+      }
+      updateImmunityBar();
+    }
+
+    function createBar() {
+      const dir = Math.floor(Math.random() * 4);
+      const size = 30;
+      const len = Math.random() * 200 + 200;
+      const speed = 2 + Math.random() * 2;
+      let bar;
+      switch (dir) {
+        case 0: bar = { x: -size, y: Math.random() * (canvas.height - len), width: size, height: len, dx: speed, dy: 0 }; break;
+        case 1: bar = { x: canvas.width, y: Math.random() * (canvas.height - len), width: size, height: len, dx: -speed, dy: 0 }; break;
+        case 2: bar = { x: Math.random() * (canvas.width - len), y: -size, width: len, height: size, dx: 0, dy: speed }; break;
+        case 3: bar = { x: Math.random() * (canvas.width - len), y: canvas.height, width: len, height: size, dx: 0, dy: -speed }; break;
+      }
+      bars.push(bar);
+    }
+
+    function moveBars() {
+      bars.forEach(bar => {
+        bar.x += bar.dx;
+        bar.y += bar.dy;
+      });
+    }
+
+    function checkCollisions() {
+      if (player.immune) return;
+      for (let b of bars) {
+        if (player.x + player.radius > b.x && player.x - player.radius < b.x + b.width &&
+            player.y + player.radius > b.y && player.y - player.radius < b.y + b.height) {
+          gameOver = true;
+          finalScoreText.textContent = `Pontuação final: ${score}`;
+          gameOverScreen.classList.remove('hidden');
+        }
+      }
+    }
+
+    function draw() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      ctx.strokeStyle = 'white';
+      ctx.strokeRect(boundary.x, boundary.y, boundary.width, boundary.height);
+
+      // Draw trail
+      const now = Date.now();
+      player.trail = player.trail.filter(p => now - p.time < 600);
+      ctx.strokeStyle = 'rgba(255,255,255,0.2)';
+      ctx.lineWidth = 6;
+      ctx.beginPath();
+      for (let i = 0; i < player.trail.length; i++) {
+        const p = player.trail[i];
+        if (i === 0) ctx.moveTo(p.x, p.y);
+        else ctx.lineTo(p.x, p.y);
+      }
+      ctx.stroke();
+
+      // Draw player
+      ctx.beginPath();
+      ctx.arc(player.x, player.y, player.radius, 0, Math.PI * 2);
+      ctx.fillStyle = player.immune ? 'yellow' : 'white';
+      ctx.fill();
+
+      // Draw aura if immune
+      if (player.immune) {
+        ctx.beginPath();
+        ctx.arc(player.x, player.y, player.radius + 10, 0, Math.PI * 2);
+        ctx.strokeStyle = 'yellow';
+        ctx.lineWidth = 3;
+        ctx.stroke();
+      }
+
+      // Draw bars
+      ctx.fillStyle = 'red';
+      bars.forEach(bar => ctx.fillRect(bar.x, bar.y, bar.width, bar.height));
+
+      ctx.fillStyle = 'white';
+      ctx.font = '20px Arial';
+      ctx.fillText(`Pontuação: ${score}`, 10, 20);
+    }
+
+    function updateRanking() {
+      const list = document.getElementById('rankingList');
+      list.innerHTML = '';
+      rankings.sort((a, b) => b.score - a.score).slice(0, 10).forEach(entry => {
+        const li = document.createElement('li');
+        li.textContent = `${entry.name} - ${entry.score}`;
+        list.appendChild(li);
+      });
+    }
+
+    function gameLoop(ts) {
+      if (!lastFrameTime) lastFrameTime = ts;
+      const delta = ts - lastFrameTime;
+      lastFrameTime = ts;
+
+      if (gameStarted && !gameOver) {
+        if (ts - lastBarTime > 2000) {
+          createBar();
+          lastBarTime = ts;
+          score += 1;
+        }
+
+        movePlayer();
+        moveBars();
+        manageImmunity();
+        checkCollisions();
+        draw();
+
+        requestAnimationFrame(gameLoop);
+      } else {
+        draw(); // Mostra tela parada
+      }
+    }
+
+    updateRanking();
+    requestAnimationFrame(gameLoop);
+  </script>
 </body>
 </html>
